--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <nukleus.version>0.6.2</nukleus.version>
     <nukleus.plugin.version>0.7.8</nukleus.plugin.version>
     <nukleus.spec.version>0.8</nukleus.spec.version>
+    <maven.shade.plugin.version>3.1.0</maven.shade.plugin.version>
   </properties>
 
   <dependencies>
@@ -128,6 +129,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
+        <version>${maven.shade.plugin.version}</version>
         <executions>
           <execution>
             <phase>package</phase>
