--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.reaktivity</groupId>
   <artifactId>command-log</artifactId>
-  <version>develop-SNAPSHOT</version>
+  <version>0.1</version>
   <name>Reaktivity "log" Command</name>
   <url>https://github.com/reaktivity/command-log.java</url>
 
