--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
   <groupId>org.reaktivity</groupId>
   <artifactId>command-log</artifactId>
   <version>0.1</version>
-  <name>Reaktivity "log" Command</name>
+  <name>Reaktivity log Command</name>
+  <description>Reaktivity log Command</description>
   <url>https://github.com/reaktivity/command-log.java</url>
 
   <licenses>
