--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,10 @@
     <checkstyle.config.location>src/conf/checkstyle/configuration.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>src/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
 
-    <nukleus.version>0.11</nukleus.version>
+    <nukleus.version>develop-SNAPSHOT</nukleus.version>
     <nukleus.plugin.version>0.13</nukleus.plugin.version>
-    <nukleus.spec.version>0.12</nukleus.spec.version>
-    <nukleus.http.spec.version>0.38</nukleus.http.spec.version>
+    <nukleus.spec.version>develop-SNAPSHOT</nukleus.spec.version>
+    <nukleus.http.spec.version>develop-SNAPSHOT</nukleus.http.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
     <jacoco.missed.count>0</jacoco.missed.count>
