--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,8 @@
     <checkstyle.suppressions.location>src/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
 
     <nukleus.version>0.13</nukleus.version>
-    <nukleus.plugin.version>develop-SNAPSHOT</nukleus.plugin.version>
-    <nukleus.spec.version>develop-SNAPSHOT</nukleus.spec.version>
+    <nukleus.plugin.version>0.24</nukleus.plugin.version>
+    <nukleus.spec.version>0.15</nukleus.spec.version>
     <nukleus.http.spec.version>0.43</nukleus.http.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
