--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
     <checkstyle.config.location>src/conf/checkstyle/configuration.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>src/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
 
-    <nukleus.version>0.17</nukleus.version>
+    <nukleus.version>develop-SNAPSHOT</nukleus.version>
     <nukleus.plugin.version>0.25</nukleus.plugin.version>
-    <nukleus.http.spec.version>0.45</nukleus.http.spec.version>
+    <nukleus.http.spec.version>develop-SNAPSHOT</nukleus.http.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
     <jacoco.missed.count>0</jacoco.missed.count>
