--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <nukleus.version>0.22</nukleus.version>
     <nukleus.plugin.version>0.25</nukleus.plugin.version>
     <nukleus.http.spec.version>0.56</nukleus.http.spec.version>
+    <nukleus.tls.spec.version>0.26</nukleus.tls.spec.version>
     <nukleus.tcp.spec.version>0.38</nukleus.tcp.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
@@ -71,6 +72,12 @@
       <version>${nukleus.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.reaktivity</groupId>
+      <artifactId>nukleus-tls.spec</artifactId>
+      <version>${nukleus.tls.spec.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.3.1</version>
@@ -84,7 +91,7 @@
         <artifactId>nukleus-maven-plugin</artifactId>
         <version>${nukleus.plugin.version}</version>
         <configuration>
-          <scopeNames>core http::stream tcp::stream</scopeNames>
+          <scopeNames>core http::stream tcp::stream tls::control</scopeNames>
           <packageName>org.reaktivity.command.log.internal.types</packageName>
         </configuration>
         <executions>
