--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
       <groupId>org.reaktivity</groupId>
       <artifactId>nukleus-http.spec</artifactId>
       <version>${nukleus.http.spec.version}</version>
-      <scope>provided</scope>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.reaktivity</groupId>
