--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,10 @@
     <checkstyle.config.location>src/conf/checkstyle/configuration.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>src/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
 
-    <reaktor.version>0.96</reaktor.version>
-    <nukleus.plugin.version>0.41</nukleus.plugin.version>
+    <reaktor.version>0.99</reaktor.version>
+    <nukleus.plugin.version>0.42</nukleus.plugin.version>
     <nukleus.http.spec.version>develop-SNAPSHOT</nukleus.http.spec.version>
-    <nukleus.tls.spec.version>develop-SNAPSHOT</nukleus.tls.spec.version>
+    <nukleus.tls.spec.version>0.41</nukleus.tls.spec.version>
     <nukleus.tcp.spec.version>develop-SNAPSHOT</nukleus.tcp.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
