--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,12 @@
                 <transformer
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>org.reaktivity.command.log.internal.LogCommand</mainClass>
+                  <manifestEntries>
+                    <Name>org/reaktivity/command/log/internal/</Name>
+                    <Specification-Title>${project.name}</Specification-Title>
+                    <Specification-Version>${project.version}</Specification-Version>
+                    <Specification-Vendor>reaktivity.org</Specification-Vendor>
+                  </manifestEntries>
                 </transformer>
               </transformers>
             </configuration>
