--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,12 @@
     <checkstyle.config.location>src/conf/checkstyle/configuration.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>src/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
 
-    <reaktor.version>0.115</reaktor.version>
-    <nukleus.plugin.version>0.45</nukleus.plugin.version>
-    <nukleus.kafka.spec.version>0.122</nukleus.kafka.spec.version>
-    <nukleus.http.spec.version>0.88</nukleus.http.spec.version>
-    <nukleus.tls.spec.version>0.47</nukleus.tls.spec.version>
-    <nukleus.tcp.spec.version>0.60</nukleus.tcp.spec.version>
+    <reaktor.version>develop-SNAPSHOT</reaktor.version>
+    <nukleus.plugin.version>develop-SNAPSHOT</nukleus.plugin.version>
+    <nukleus.kafka.spec.version>develop-SNAPSHOT</nukleus.kafka.spec.version>
+    <nukleus.http.spec.version>develop-SNAPSHOT</nukleus.http.spec.version>
+    <nukleus.tls.spec.version>develop-SNAPSHOT</nukleus.tls.spec.version>
+    <nukleus.tcp.spec.version>develop-SNAPSHOT</nukleus.tcp.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
     <jacoco.missed.count>0</jacoco.missed.count>
