--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,13 @@
     <checkstyle.suppressions.location>src/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
 
     <reaktor.version>0.130</reaktor.version>
-    <nukleus.plugin.version>0.49</nukleus.plugin.version>
+    <nukleus.plugin.version>0.50</nukleus.plugin.version>
+    <nukleus.amqp.spec.version>0.8</nukleus.amqp.spec.version>
     <nukleus.mqtt.spec.version>0.28</nukleus.mqtt.spec.version>
     <nukleus.kafka.spec.version>0.133</nukleus.kafka.spec.version>
     <nukleus.http.spec.version>0.91</nukleus.http.spec.version>
     <nukleus.tls.spec.version>0.49</nukleus.tls.spec.version>
     <nukleus.tcp.spec.version>0.61</nukleus.tcp.spec.version>
-    <nukleus.amqp.spec.version>develop-SNAPSHOT</nukleus.amqp.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
     <jacoco.missed.count>0</jacoco.missed.count>
