Update nukleus-mqtt.spec dependency version

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <reaktor.version>0.130</reaktor.version>
     <nukleus.plugin.version>0.50</nukleus.plugin.version>
     <nukleus.amqp.spec.version>0.8</nukleus.amqp.spec.version>
-    <nukleus.mqtt.spec.version>develop-SNAPSHOT</nukleus.mqtt.spec.version>
+    <nukleus.mqtt.spec.version>0.33</nukleus.mqtt.spec.version>
     <nukleus.kafka.spec.version>0.133</nukleus.kafka.spec.version>
     <nukleus.http.spec.version>0.91</nukleus.http.spec.version>
     <nukleus.tls.spec.version>0.49</nukleus.tls.spec.version>
