--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
   <dependencies>
     <dependency>
       <groupId>org.reaktivity</groupId>
+      <artifactId>nukleus.spec</artifactId>
+      <version>develop-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.reaktivity</groupId>
       <artifactId>nukleus-tcp.spec</artifactId>
       <version>${nukleus.tcp.spec.version}</version>
       <scope>provided</scope>
