--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <nukleus.plugin.version>0.50</nukleus.plugin.version>
     <nukleus.amqp.spec.version>0.12</nukleus.amqp.spec.version>
     <nukleus.mqtt.spec.version>0.33</nukleus.mqtt.spec.version>
-    <nukleus.kafka.spec.version>0.133</nukleus.kafka.spec.version>
+    <nukleus.kafka.spec.version>develop-SNAPSHOT</nukleus.kafka.spec.version>
     <nukleus.http.spec.version>0.91</nukleus.http.spec.version>
     <nukleus.tls.spec.version>0.49</nukleus.tls.spec.version>
     <nukleus.tcp.spec.version>0.61</nukleus.tcp.spec.version>
