--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
     <reaktor.version>0.140</reaktor.version>
     <nukleus.plugin.version>0.64</nukleus.plugin.version>
-    <nukleus.amqp.spec.version>develop-SNAPSHOT</nukleus.amqp.spec.version>
+    <nukleus.amqp.spec.version>0.20</nukleus.amqp.spec.version>
     <nukleus.mqtt.spec.version>0.45</nukleus.mqtt.spec.version>
     <nukleus.kafka.spec.version>0.146</nukleus.kafka.spec.version>
     <nukleus.http.spec.version>0.97</nukleus.http.spec.version>
