--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <reaktor.version>0.140</reaktor.version>
     <nukleus.plugin.version>0.64</nukleus.plugin.version>
     <nukleus.amqp.spec.version>0.19</nukleus.amqp.spec.version>
-    <nukleus.mqtt.spec.version>develop-SNAPSHOT</nukleus.mqtt.spec.version>
+    <nukleus.mqtt.spec.version>0.46</nukleus.mqtt.spec.version>
     <nukleus.kafka.spec.version>0.151</nukleus.kafka.spec.version>
     <nukleus.http.spec.version>0.97</nukleus.http.spec.version>
     <nukleus.tls.spec.version>0.53</nukleus.tls.spec.version>
