--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
 
     <reaktor.version>0.146</reaktor.version>
     <nukleus.plugin.version>0.64</nukleus.plugin.version>
-    <nukleus.amqp.spec.version>0.23</nukleus.amqp.spec.version>
-    <nukleus.mqtt.spec.version>0.46</nukleus.mqtt.spec.version>
-    <nukleus.kafka.spec.version>0.152</nukleus.kafka.spec.version>
-    <nukleus.http.spec.version>0.97</nukleus.http.spec.version>
-    <nukleus.tls.spec.version>0.53</nukleus.tls.spec.version>
-    <nukleus.tcp.spec.version>0.63</nukleus.tcp.spec.version>
+    <nukleus.amqp.spec.version>develop-SNAPSHOT</nukleus.amqp.spec.version>
+    <nukleus.mqtt.spec.version>develop-SNAPSHOT</nukleus.mqtt.spec.version>
+    <nukleus.kafka.spec.version>develop-SNAPSHOT</nukleus.kafka.spec.version>
+    <nukleus.http.spec.version>develop-SNAPSHOT</nukleus.http.spec.version>
+    <nukleus.tls.spec.version>develop-SNAPSHOT</nukleus.tls.spec.version>
+    <nukleus.tcp.spec.version>develop-SNAPSHOT</nukleus.tcp.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
     <jacoco.missed.count>0</jacoco.missed.count>
