--- a/pom.xml
+++ b/pom.xml
@@ -50,14 +50,14 @@
     <checkstyle.config.location>src/conf/checkstyle/configuration.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>src/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
 
-    <reaktor.version>0.163</reaktor.version>
+    <reaktor.version>develop-SNAPSHOT</reaktor.version>
     <nukleus.plugin.version>0.85</nukleus.plugin.version>
     <nukleus.amqp.spec.version>0.60</nukleus.amqp.spec.version>
     <nukleus.mqtt.spec.version>0.61</nukleus.mqtt.spec.version>
     <nukleus.kafka.spec.version>0.171</nukleus.kafka.spec.version>
     <nukleus.http.spec.version>0.109</nukleus.http.spec.version>
     <nukleus.tls.spec.version>0.62</nukleus.tls.spec.version>
-    <nukleus.proxy.spec.version>0.16</nukleus.proxy.spec.version>
+    <nukleus.proxy.spec.version>develop-SNAPSHOT</nukleus.proxy.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
     <jacoco.missed.count>0</jacoco.missed.count>
