--- a/pom.xml
+++ b/pom.xml
@@ -50,14 +50,13 @@
     <checkstyle.config.location>src/conf/checkstyle/configuration.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>src/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
 
-    <reaktor.version>develop-SNAPSHOT</reaktor.version>
-    <nukleus.plugin.version>0.85</nukleus.plugin.version>
-    <nukleus.amqp.spec.version>0.60</nukleus.amqp.spec.version>
-    <nukleus.mqtt.spec.version>0.61</nukleus.mqtt.spec.version>
-    <nukleus.kafka.spec.version>0.171</nukleus.kafka.spec.version>
-    <nukleus.http.spec.version>0.109</nukleus.http.spec.version>
-    <nukleus.tls.spec.version>0.62</nukleus.tls.spec.version>
-    <nukleus.proxy.spec.version>develop-SNAPSHOT</nukleus.proxy.spec.version>
+    <reaktor.version>0.166</reaktor.version>
+    <nukleus.plugin.version>0.86</nukleus.plugin.version>
+    <nukleus.amqp.spec.version>0.61</nukleus.amqp.spec.version>
+    <nukleus.mqtt.spec.version>0.62</nukleus.mqtt.spec.version>
+    <nukleus.kafka.spec.version>0.172</nukleus.kafka.spec.version>
+    <nukleus.http.spec.version>0.110</nukleus.http.spec.version>
+    <nukleus.proxy.spec.version>0.17</nukleus.proxy.spec.version>
 
     <jacoco.coverage.ratio>1.00</jacoco.coverage.ratio>
     <jacoco.missed.count>0</jacoco.missed.count>
@@ -68,12 +67,6 @@
       <groupId>org.reaktivity</groupId>
       <artifactId>nukleus-proxy.spec</artifactId>
       <version>${nukleus.proxy.spec.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.reaktivity</groupId>
-      <artifactId>nukleus-tls.spec</artifactId>
-      <version>${nukleus.tls.spec.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -119,7 +112,7 @@
         <artifactId>nukleus-maven-plugin</artifactId>
         <version>${nukleus.plugin.version}</version>
         <configuration>
-          <scopeNames>core amqp::stream mqtt::stream kafka::stream http::stream tls::control proxy::stream</scopeNames>
+          <scopeNames>core amqp::stream mqtt::stream kafka::stream http::stream proxy::stream</scopeNames>
           <packageName>org.reaktivity.command.log.internal.types</packageName>
         </configuration>
         <executions>
